Document create admin route
