# storage/api-docs/api-docs.json
@@ -6,6 +6,95 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/admin/create": {
+            "post": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Create a new admin account",
+                "operationId": "42daecb3803af8cdd4cafdce4649bfd8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation",
+                                    "address",
+                                    "phone_number"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "description": "The user's first name",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "last_name": {
+                                        "description": "The user's last name",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "email": {
+                                        "description": "The user's email address",
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": ""
+                                    },
+                                    "password": {
+                                        "description": "The user's password",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "password_confirmation": {
+                                        "description": "Password confirmation",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "address": {
+                                        "description": "The user's address",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "phone_number": {
+                                        "description": "The user's phone number",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "is_marketing": {
+                                        "description": "Marketing consent",
+                                        "type": "boolean",
+                                        "example": "",
+                                        "nullable": true
+                                    },
+                                    "avatar": {
+                                        "description": "The user's avatar URL",
+                                        "type": "string",
+                                        "example": "",
+                                        "nullable": true
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Admin created successfully"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/api/v1/file/upload": {
             "post": {
                 "tags": [
@@ -1461,6 +1550,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Admin",
+            "description": "Admin API endpoint"
+        },
         {
             "name": "File",
             "description": "File API endpoint"
